objects/UNITY_Template_Configuration_Line_Item__c.object
<CustomObject>
    <description>Template Configuration Child Object to hold &apos;Key&apos; &apos;Value&apos; pairs of any field of the Target Object and it&apos;s value.</description>
    <fields>
        <fullName>UNITY_Parent_Template_Configuration__c</fullName>
        <label>Parent Template Configuration</label>
        <referenceTo>UNITY_Template_Configuration__c</referenceTo>
        <relationshipLabel>Template Configuration Line Items</relationshipLabel>
        <relationshipName>UNITY_Template_Configuration_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Object_Field_Value__c</fullName>
        <label>Target Object Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Object_Field__c</fullName>
        <label>Target Object Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Template Configuration Line Item</label>
    <nameField>
        <displayFormat>TCLI-{00000}</displayFormat>
        <label>Template Configuration Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Configuration Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>